--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,36 +1,36 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to stan-js
+description: stan-js is a lightweight and flexible state management library designed for use in React, React Native and even vanilla-js applications
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Bober
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/stan.svg
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Getting started
+      link: /guides/introduction/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: View on GitHub
+      link: https://github.com/codemask-labs/stan-js
       icon: external
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from '@astrojs/starlight/components'
 
-## Next steps
+## Why stan-js?
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Performance and minimal rerenders" icon="rocket">
+        stan-js is blazingly fast state management solution for your React, React Native and even vanilla-js apps.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Minimal configuration" icon="pencil">
+        It needs only a few lines of code to get started. No need for boilerplate or writing your own type definitions.
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+	<Card title="Live demo" icon="seti:crystal_embedded">
+        Check out our [live demos](/examples/react) to see stan-js in action.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Why stan-js over X?" icon="open-book">
+		Learn more in [Why stan-js over X?](/guides/why-stan-js-over-x/)
 	</Card>
 </CardGrid>
