chore: update build

--- a/docs/src/content/docs/examples/react-astro.mdx
+++ b/docs/src/content/docs/examples/react-astro.mdx
@@ -4,7 +4,7 @@ description: 'Example of using stan-js with React and Astro'
 next: false
 ---
 
-import { Code } from './src/code'
+import { Code } from '@/code'
 
 <iframe src="https://stackblitz.com/github/codemask-labs/stan-js/tree/main/examples/astro?embed=1&hideExplorer=1&view=preview" />
 
