--- a/docs/src/content/docs/examples/react.mdx
+++ b/docs/src/content/docs/examples/react.mdx
@@ -3,7 +3,7 @@ title: React & stan-js
 description: 'Example of using stan-js with React'
 ---
 
-import { Code } from './src/code'
+import { Code } from '@/code'
 
 <iframe src="https://stackblitz.com/github/codemask-labs/stan-js/tree/main/examples/react?embed=1&hideExplorer=1&view=preview" />
 
