--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/stan.svg
   actions:
     - text: Getting started
-      link: /guides/introduction/
+      link: guides/introduction/
       icon: right-arrow
       variant: primary
     - text: View on GitHub
