--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/stan.svg
   actions:
     - text: Getting started
-      link: guides/introduction/
+      link: ./guides/introduction/
       icon: right-arrow
       variant: primary
     - text: View on GitHub
@@ -28,9 +28,9 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
         It needs only a few lines of code to get started. No need for boilerplate or writing your own type definitions.
 	</Card>
 	<Card title="Live demo" icon="seti:crystal_embedded">
-        Check out our [live demos](/examples/react) to see stan-js in action.
+        Check out our [live demos](./examples/react) to see stan-js in action.
 	</Card>
 	<Card title="Why stan-js over X?" icon="open-book">
-		Learn more in [Why stan-js over X?](/guides/why-stan-js-over-x/)
+		Learn more in [Why stan-js over X?](./guides/why-stan-js-over-x/)
 	</Card>
 </CardGrid>
