--- a/docs/src/content/docs/guides/introduction.mdx
+++ b/docs/src/content/docs/guides/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introduction
 description: A guide on how to setup stan-js in your project.
-next: { link: /guides/createStore, label: createStore }
+next: { link: ./guides/createStore, label: createStore }
 sidebar:
     order: 1
 ---
