chore: update readme, docs and createStore

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Welcome to stan-js
 description: stan-js is a lightweight and flexible state management library designed for use in React, React Native and even vanilla-js applications
 template: splash
 hero:
-  tagline: Bober
+  tagline: Fast and elegant state management solution with minimal configuration for your React, React Native and even vanilla-js apps.
   image:
     file: ../../assets/stan.svg
   actions:
@@ -22,7 +22,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 
 <CardGrid stagger>
 	<Card title="Performance and minimal rerenders" icon="rocket">
-        stan-js is blazingly fast state management solution for your React, React Native and even vanilla-js apps.
+        Proxy, useSyncExternalStore deep-equal, and many more techniques were used to make stan-js performant and minimally rerendering.
 	</Card>
 	<Card title="Minimal configuration" icon="pencil">
         It needs only a few lines of code to get started. No need for boilerplate or writing your own type definitions.
@@ -31,6 +31,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
         Check out our [live demos](./examples/react) to see stan-js in action.
 	</Card>
 	<Card title="Why stan-js over X?" icon="open-book">
-		Learn more in [Why stan-js over X?](./guides/why-stan-js-over-x/)
+		stan-js was created to address issues when using other state management solutions, more about it in [Why stan-js over X?](./guides/why-stan-js-over-x/)
 	</Card>
 </CardGrid>
