docs: update docs

--- a/docs/src/content/docs/reference/vanilla.mdx
+++ b/docs/src/content/docs/reference/vanilla.mdx
@@ -2,9 +2,9 @@
 title: Usage with vanilla-js
 description: How to use stan-js with vanilla-js
 sidebar:
-    order: 4
+    order: 5
 ---
 
-You can use stan-js with vanilla-js we don't . `createStore` method from `stan-js/vanilla` is missing React only features such as `useStore` and `useStoreEffect` hooks.
+You can use stan-js with vanilla-js we don't force using React. `createStore` method from `stan-js/vanilla` is missing React only features such as `useStore` and `useStoreEffect` hooks.
 
 You can see usage with vanilla-js in our Astro & React [demo](../../examples/react-astro)
