chore(docs): fix some typos

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -21,8 +21,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 ## Why stan-js?
 
 <CardGrid stagger>
-	<Card title="Performance and minimal rerenders" icon="rocket">
-        Proxy, useSyncExternalStore deep-equal, and many more techniques were used to make stan-js performant and minimally rerendering.
+	<Card title="Performance and minimal re-renders" icon="rocket">
+        Proxy, useSyncExternalStore deep-equal, and many more techniques were used to make stan-js performant and minimally re-rendering.
 	</Card>
 	<Card title="Minimal configuration" icon="pencil">
         It needs only a few lines of code to get started. No need for boilerplate or writing your own type definitions.
