--- a/docs/src/content/docs/reference/destructure.mdx
+++ b/docs/src/content/docs/reference/destructure.mdx
@@ -66,9 +66,9 @@ export const store = createStore({
 ```
 
 <Aside type="caution" title="This logic applies to most of our methods such as:">
-- effect
-- useStoreEffect
-- useStore
+- `effect`
+- `useStoreEffect`
+- `useStore`
 
 So keep it in mind when you are using them.
 </Aside>
