chore(docs): fix link

--- a/docs/src/content/docs/other/why-stan-js-over-x.mdx
+++ b/docs/src/content/docs/other/why-stan-js-over-x.mdx
@@ -33,4 +33,4 @@ We can talk more and more about other state management solutions, and their cons
 
 stan-js saves your day by providing a simple and intuitive API that is easy to use and understand.
 
-Read more about our API in [createStore](../../reference/createStore).
+Read more about our API in [createStore](../../reference/createstore).
