chore: update docs

--- a/docs/src/content/docs/examples/react-astro.mdx
+++ b/docs/src/content/docs/examples/react-astro.mdx
@@ -1,7 +1,9 @@
 ---
-title: React & Astro & stan-js
+title: React & Astro
 description: 'Example of using stan-js with React and Astro'
 next: false
+sidebar:
+    order: 2
 ---
 
 import { Code } from '@/code'
