--- a/docs/src/content/docs/examples/react.mdx
+++ b/docs/src/content/docs/examples/react.mdx
@@ -1,6 +1,8 @@
 ---
-title: React & stan-js
+title: React
 description: 'Example of using stan-js with React'
+sidebar:
+    order: 0
 ---
 
 import { Code } from '@/code'
