--- a/docs/src/content/docs/reference/scoped-store.mdx
+++ b/docs/src/content/docs/reference/scoped-store.mdx
@@ -24,66 +24,4 @@ export const { StoreProvider, useScopedStore, withStore } = createScopedStore({
 
 ## Examples
 
-#### SSR scoped store:
-
-```typescript
-import { createScopedStore } from 'stan-js'
-
-export const { StoreProvider, useScopedStore } = createScopedStore({
-    count: 0,
-    name: 'John'
-})
-``` 
-
-```typescript
-// SSR Layout
-
-<Layout>
-    <StoreProvider initialValue={{ name: await db.getUser().name }}>
-        {children}
-    </StoreProvider>
-</Layout>
-```
-
-```typescript
-// Some client component inside layout
-
-const scopedStore = useScopedStore()
-const { name } = scopedStore.useStore()
-
-return (
-    <h1>
-        Hello {name}
-    </h1>
-)
-```
-
-#### Scoped store with regular routing
-
-```typescript
-import { createScopedStore } from 'stan-js'
-
-export const { StoreProvider, useScopedStore } = createScopedStore({
-    count: 0,
-    name: 'John'
-})
-``` 
-
-```typescript
-const ProfileScreen = withStore(() => {
-    // Component body...
-})
-```
-
-```typescript
-// Some component inside ProfileScreen
-
-const scopedStore = useScopedStore()
-const { name } = scopedStore.useStore()
-
-return (
-    <h1>
-        Hello {name}
-    </h1>
-)
-```
+- [Next.js SSR](../../examples/nextjs)
