chore: update docs path

--- a/docs/src/content/docs/guides/devtools.mdx
+++ b/docs/src/content/docs/guides/devtools.mdx
@@ -11,7 +11,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components'
 ## 📺 Preview
 
 <video controls>
-    <source src="stan-js/devtools.mov" />
+    <source src="/stan-js/devtools.mov" />
 </video>
 
 ## 📦 Installation
