chore: update docs video

--- a/docs/src/content/docs/guides/devtools.mdx
+++ b/docs/src/content/docs/guides/devtools.mdx
@@ -8,6 +8,8 @@ sidebar:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components'
 
+Enhance your development workflow with a comprehensive tool designed for stan-js state management in React. Inspect state trees, monitor real-time state changes, and track actions with ease.
+
 ## 📺 Preview
 
 <video controls>
